--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@types/debug": "0.0.30",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "method-override": "^2.3.6",
@@ -19,10 +21,10 @@
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
-    "@types/body-parser": "0.0.33",
+    "@types/body-parser": "1.16.5",
     "@types/cookie-parser": "^1.3.30",
-    "@types/errorhandler": "0.0.30",
-    "@types/method-override": "0.0.29",
+    "@types/errorhandler": "0.0.31",
+    "@types/method-override": "0.0.30",
     "@types/morgan": "^1.7.32",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
